--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -95,6 +95,10 @@ body {
     }
 }
 
+.section-4 {
+    padding: 5rem 0 2rem 0;
+}
+
 .img-car {
     z-index: 2;
     @media screen and (max-width: 991px) {
@@ -134,7 +138,6 @@ body {
 
 .card {
     height: 196px;
-    width: 268px;
 }
 
 .card-text {
