--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,7 +16,8 @@ $neutral04: #3C3C3C;
 $neutral03: #8A8A8A;
 $neutral02: #D0D0D0;
 $neutral01: #FFFFFF;
-$font-weights: ("light": 300,  "regular": 400, "medium": 500, "semibold": 600, "bold": 700, );
+$font-weights: ("light": 300, "regular": 400, "medium": 500, "semibold": 600, "bold": 700, );
+
 body {
     font-family: 'Poppins', sans-serif;
     font-weight: map-get($font-weights, regular);
@@ -41,6 +42,13 @@ body {
     font-weight: 700;
 }
 
+.title-4 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 54px;
+    color: #FFFFFF;
+}
+
 .description {
     font-size: 16px;
     color: $neutral05;
@@ -51,17 +59,20 @@ body {
 .navbar {
     padding: 20px 0 20px 0;
     background: #F1F3FF;
+
     .navbar-brand {
         img {
             height: 40px;
             width: 100%;
         }
     }
+
     .navbar-nav {
         .nav-link {
             padding-left: 32px;
         }
     }
+
     .button-signup {
         padding-left: 32px;
     }
@@ -71,12 +82,14 @@ body {
     background: #F1F3FF;
     position: relative;
     height: 490px;
+
     .header {
         margin: 16px 0 16px 0;
         font-size: 36px;
         color: $neutral05;
         font-weight: map-get($font-weights, bold);
     }
+
     .hero {
         height: 490px;
     }
@@ -86,21 +99,32 @@ body {
     ul {
         list-style: none;
         padding: 0;
+
         li {
             padding-top: 10px;
         }
     }
+
     .img-service {
         width: 459px;
     }
 }
 
 .section-4 {
-    padding: 5rem 0 2rem 0;
+    padding: 5rem 0 5rem 0;
+}
+
+.section-5 {
+    padding: 0 0 5rem 0;
+}
+
+.section-6 {
+    padding: 0 0 5rem 0;
 }
 
 .img-car {
     z-index: 2;
+
     @media screen and (max-width: 991px) {
         display: none;
     }
@@ -115,6 +139,7 @@ body {
     top: 260px;
     border-radius: 85px 0 0 0;
     z-index: 1;
+
     @media screen and (max-width: 991px) {
         display: none;
     }
@@ -131,6 +156,7 @@ body {
     @extend .btn-master;
     background: $green04;
     color: $neutral01;
+
     &:hover {
         background: $green05;
     }
@@ -148,4 +174,106 @@ body {
 
 .icon {
     margin-bottom: 16px;
+}
+
+.owl-carousel .owl-item img {
+    width: auto;
+}
+
+.owl-nav {
+    margin: 20px 0 0;
+    text-align: center;
+}
+
+.owl-carousel .owl-nav button.owl-next,
+.owl-carousel .owl-nav button.owl-prev {
+    margin: 0 20px;
+    height: 32px;
+    width: 32px;
+    background: #FFFFFF;
+    border: 1px solid #C4C4C4;
+    border-radius: 50px;
+}
+
+.owl-carousel .owl-nav button.owl-next:hover,
+.owl-carousel .owl-nav button.owl-prev:hover {
+    background: #5CB85F;
+    border: none;
+}
+
+.blog {
+    overflow: hidden;
+    position: relative;
+    background-color: #e3d9ff;
+    color: #333;
+    text-align: center;
+    width: 100%;
+    height: 200px;
+    border-radius: 8px;
+}
+
+.img-testimonials {
+    width: 80px;
+    height: 80px;
+}
+
+.title {
+    color: #fff;
+    font-weight: 500;
+    margin: 5px 0;
+}
+
+.star {
+    position: relative;
+    float: left;
+    margin-bottom: 8px;
+}
+
+.desc-testi {
+    position: relative;
+    float: left;
+    text-align: left;
+    padding-right: 32px;
+}
+
+.desc-testi p {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
+    margin-bottom: 8px;
+}
+
+.user-testi {
+    position: relative;
+    float: left;
+    text-align: left;
+    padding-right: 32px;
+}
+
+.user-testi p {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    margin-bottom: 0;
+}
+
+.bg-biru {
+    width: 100%;
+    height: 326px;
+    background: #0D28A6;
+    border-radius: 13px;
+}
+
+.desc-sec-5 {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
+    color: #FFFFFF;
+    margin-top: 16px;
+    margin-bottom: 52px;
+}
+
+.accordion .accordion-item {
+    border: 1px solid rgba(0,0,0,.125) !important;
+    border-radius: 10px !important;
 }
